# Flask-Website

./: main.py  pyproject.toml  requirements.txt
website/: __init__.py  auth.py  models.py  views.py
website/templates/: base.html  home.html  login.html  sign_up.html
