[tool.poetry]
name = "flask-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Login = "^0.5.0"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
